--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -44,3 +44,14 @@ body {
 	p {font-size: 10px;}
 
 }
+
+.caption {
+	
+	h3 {font-size: 17px;
+		margin: 2px;
+	}
+	p {
+		font-size: 15px;
+		margin: 4px;
+	}
+}
