associate listings with users

--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -9,6 +9,7 @@
             <h4><%= listing.ame %></h4>
              <h6><%= listing.description %></h6>
             <p><%= number_to_currency(listing.price) %></p>
+            <p><h6><%= "Sold by: #{listing.user.name }" %></h6></p>
             <%= link_to 'Show', listing, Class: "btn btn-default" %>
             <%= link_to 'Edit', edit_listing_path(listing), Class: "btn btn-default"  %>
             <%= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' }, Class: "btn btn-default"%>
