--- a/app/views/listings/seller.html.erb
+++ b/app/views/listings/seller.html.erb
@@ -1,4 +1,3 @@
-
 <div class="left">
   <div class="row">
     <% @listings.each do |listing| %>
@@ -13,7 +12,8 @@
             <p><h6><%= "Sold by: #{listing.user.name }" %></h6></p>
 
             <% if (user_signed_in?) && (current_user == listing.user) %>
-
+              <%= link_to 'Edit', edit_listing_path(listing), Class: "btn btn-default"  %>
+              <%= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' }, Class: "btn btn-default"%>
            <% end %>
           </div>
         </div>
