Add banner to homepage

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -60,3 +60,10 @@ body {
 		margin: 4px;
 	}
 }
+
+.jumbotron {
+	
+	background-image: url('jumbotron.jpg');
+	h1,h2 {font-family: guardian-egyptt,georgia,serif;
+		}
+}
