--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,3 +1,11 @@
+<! from lecture 31 />
+<div class="jumbotron">
+  <div class="container">
+  <h1>Handcrafted items from <br> 
+    around the world.</h1>
+  <h2>Discover one-of-a-kind items</h2>
+</div>
+</div>
 
 <div class="left">
   <div class="row">
