--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -2,4 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back', orders_path %>
+<!-- Changed the default to make sure this goes back to orders index-->
+<%= link_to 'Back', listing_orders_path %>
